tests/compile-fail/Rule_8_11.rs
pub const arr: [i32] = []; //~ ERROR the size for values of type `[i32]` cannot be known at compilation time [E0277]


fn main() {}
